--- a/mybio.html
+++ b/mybio.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Isaac Kwon's Bio</title>
-  </head>
-  <body>
-    <h1>Student Bio</h1>
-    <h2>Isaac Kwon</h2>
-    <img src="IMG_0936.JPG" alt="Isaac" width="300" height="400">
-    <p>My name is Isaac. I love <a href="http://www.codeconquest.com/what-is-coding/" target="_blank">coding </a>and korean bbq. My favorite band is Muse.</p>
-    <h1>My Contact Info</h1>
+
+<head>
+  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <title>Isaac Kwon's Bio</title>
+</head>
+
+<body>
+  <h1 id="header">Student Bio</h1>
+  <div id="container">
+    <div id="left-content">
+      <h2 id="name">Isaac Kwon</h2>
+      <img id="image" src="IMG_0936.JPG" alt="Isaac">
+      <p>My name is Isaac. I love <a href="http://www.codeconquest.com/what-is-coding/" target="_blank">coding </a>and korean bbq. My favorite band is Muse.</p>
+    </div>
+    <div id="contact">
+      <h2>My Contact Info</h1>
     <ul>
       <li>Email: <a href="#">isaac-kwon@hotmail.com</a></li>
       <li>Github: <a href="#">isaac1104</a></li>
       <li>Portfolio <a href="#">coming soon</a></li>
     </ul>
-  </body>
+  </div>
+</div>
+</body>
+
 </html>
